test/scenarios/test-exp2/test3/kyverno-test.yaml
name: disallow_priviledged
policies:
  -  policy.yaml
resources:
  -  resource.yaml
results:
  - policy: disallow-privileged
    rule: validate-privileged
    resource: check-privileged-cfg
    kind: Pod
    result: fail
  - policy: disallow-privileged
    rule: validate-allowPrivilegeEscalation
    resource: check-privileged-cfg
    kind: Pod
    result: fail
